# stockvalue-exporter

./: .copier-answers.yml  .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.ja.md  README.md  config.json  docker-compose.yml  pyproject.toml  requirements.txt  stockvalue.py
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: docker-build.yml  docker-release.yml  pr-agent.yml  pr-quality-checks.yml  pr-tag-check.yml
app/: app.py  asset_handler.py  base_view.py  cache.py  config.py  health_view.py  main.py  main_class.py  metrics_config_optimized.py  metrics_factory.py  metrics_reduction_analysis.md  metrics_view.py  pyproject.toml  stock_fetcher.py  stocks_view.py  version_view.py
app/tests/: __init__.py  conftest.py  test_app.py  test_asset_handler.py  test_base_view.py  test_cache.py  test_health_view.py  test_metrics_factory.py  test_metrics_reduction.py  test_metrics_view.py  test_stock_fetcher.py  test_stocks_view.py  test_symbol_classifier.py  test_version_view.py
docker/: Dockerfile.dev  Dockerfile.prod
src/: app.py  asset_handler.py  base_view.py  cache.py  config.py  health_view.py  main.py  metrics_factory.py  metrics_view.py  stock_fetcher.py  stocks_view.py  symbol_classifier.py  version_view.py
tests/: test_app.py  test_asset_handler.py  test_base_view.py  test_cache.py  test_health_view.py  test_metrics_factory.py  test_metrics_reduction.py  test_metrics_view.py  test_stock_fetcher.py  test_stocks_view.py  test_symbol_classifier.py  test_version_view.py
